bug fixes and dashboard alignment fixed

--- a/src/styles/componentStyle.css
+++ b/src/styles/componentStyle.css
@@ -1,7 +1,29 @@
 .dash{
-  background-color: #303030;
-  
+  background-color: white;
+  /* border: 1px solid black; */
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-height: auto;
+  padding-top: 50px;
+}
+
+.tab-det{
+  background-color: antiquewhite;
+  min-height: 80vh;
+  width: 1200px;
+  max-width: 95vw;
+  margin-bottom: 20px;
+}
+.speed-dial {
+    position: fixed;
+    bottom: 20px; /* Adjust the value as needed */
+    right: 20px; /* Adjust the value as needed */
+    z-index: 1000; /* Make sure it's above other content */
+}
+
+/* Add styles for the speed dial icon */
+.speed-dial-fab {
+    background-color: #007bff; /* Background color of the floating button */
+    color: white; /* Text color of the icon */
 }
